deleted "main" package with MainActivity

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,78 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10sp"
+    app:cardElevation="2sp"
+    app:cardCornerRadius="3sp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".view.activities.about.AboutActivity">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10sp"
-        app:cardElevation="2sp"
-        app:cardCornerRadius="3sp">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical" android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5sp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="5sp"
+            android:background="@color/colorPrimaryDark"
+            tools:ignore="SmallSp"
+            android:contentDescription="@string/null_str" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="5sp"
-                android:background="@color/colorPrimaryDark"
-                tools:ignore="SmallSp"
-                android:contentDescription="@string/null_str" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/like_the_app"
+            android:textAlignment="center"
+            android:gravity="center_vertical"
+            android:textColor="#000" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/like_the_app"
-                android:textAlignment="center"
-                android:gravity="center_vertical"
-                android:textColor="#000" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/rate_us_five_stars"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:gravity="center_vertical"
+            android:textColor="@color/colorWhiteShade"
+            android:background="@color/colorPrimary"
+            android:id="@+id/rate"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/rate_us_five_stars"
-                android:textSize="20sp"
-                android:textAlignment="center"
-                android:gravity="center_vertical"
-                android:textColor="@color/colorWhiteShade"
-                android:background="@color/colorPrimary"
-                android:id="@+id/rate"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="5sp"
+            android:background="@color/colorPrimaryDark"
+            tools:ignore="SmallSp"
+            android:contentDescription="@string/null_str"/>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="5sp"
-                android:background="@color/colorPrimaryDark"
-                tools:ignore="SmallSp"
-                android:contentDescription="@string/null_str"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/about_the_app"
-                android:textAlignment="center"
-                android:layout_marginTop="25sp"
-                android:gravity="center_vertical"
-                android:textColor="#000"/>
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/about"
-                android:textSize="13sp"
-                android:padding="4sp"
-                android:fontFamily="casual"/>
+                android:orientation="vertical">
 
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/about_the_app"
+                    android:textAlignment="center"
+                    android:layout_marginTop="25sp"
+                    android:gravity="center_vertical"
+                    android:textColor="#000"/>
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/about"
+                    android:textSize="13sp"
+                    android:padding="4sp"
+                    android:fontFamily="casual"/>
 
-</ScrollView>
+            </LinearLayout>
+
+        </ScrollView>
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
