--- a/app/src/main/res/layout/activity_audio_video.xml
+++ b/app/src/main/res/layout/activity_audio_video.xml
@@ -1,181 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/tools"
     android:id="@+id/activity_camera"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Sense It All!"
-            android:fontFamily="sans-serif-smallcaps"
-            android:textColor="#FFF"
-            android:textSize="20sp"
-            android:gravity="center"/>
-
-    </android.support.v7.widget.Toolbar>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:id="@+id/toolbar2"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:layout_marginTop="?actionBarSize">
-
-    </FrameLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/ll"
-        android:layout_below="@+id/toolbar">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="0sp"
-            android:layout_height="150sp"
-            android:layout_weight="1"
-            android:layout_margin="10sp"
-            app:cardCornerRadius="10sp"
-            app:cardElevation="@dimen/app_bar_elevation">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:padding="10sp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:padding="5sp"
-            android:layout_margin="10sp"
-            app:cardCornerRadius="10sp"
-            app:cardBackgroundColor="@color/colorPrimaryDark"
-            app:cardElevation="@dimen/app_bar_elevation">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:elevation="@dimen/app_bar_elevation"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textStyle="bold"
-                android:padding="6sp"
-                android:gravity="center"
-                android:textColor="@color/colorWhiteShade"
-                android:text="Audio/Video Outputs"/>
-
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="@dimen/app_bar_elevation"
-        app:cardCornerRadius="5sp"
-        android:layout_margin="10sp"
-        android:layout_below="@+id/ll">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="7dp"
-                android:elevation="@dimen/app_bar_elevation"
-                android:fontFamily="sans-serif-smallcaps"
+                android:background="@color/colorPrimary"
                 android:gravity="center"
-                android:padding="6sp"
-                android:text="Insert Earphone/Headphone to Test"
-                android:textColor="@android:color/holo_orange_dark"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-            <RelativeLayout
+                android:text="@string/sense_it_all"
+                android:textColor="#FFF"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textSize="20sp"
                 android:layout_weight="1"
+                android:textStyle="normal|bold" />
+
+        </android.support.v7.widget.Toolbar>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:id="@+id/card"
+                android:text="@string/audio_video_test"
+                android:textColor="@color/colorWhiteShade"
+                android:background="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp">
+
+            </TextView>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_margin="5sp"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center">
-
-
-                <TextView
-                    android:id="@+id/one"
+                app:cardElevation="@dimen/app_bar_elevation"
+                app:cardCornerRadius="5sp"
+                android:layout_margin="10sp"
+                android:layout_below="@+id/ll">
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:padding="3sp"
-                    android:text="State:"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="25sp" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/state"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/one"
-                    android:fontFamily="casual"
-                    android:gravity="center"
-                    android:padding="3sp"
-                    android:text="Unplugged"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="30sp" />
-
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
-
-                <TextView
-
-                    android:id="@+id/two"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:gravity="center"
-                    android:padding="3sp"
-                    android:text="Has a microphone?"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="25sp" />
-
-                <TextView
-                    android:id="@+id/mic"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/two"
-                    android:fontFamily="casual"
-                    android:gravity="center"
-                    android:padding="3sp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="30sp" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="7dp"
+                        android:elevation="@dimen/app_bar_elevation"
+                        android:fontFamily="sans-serif-smallcaps"
+                        android:gravity="center"
+                        android:padding="6sp"
+                        android:text="Insert Earphone/Headphone to Test"
+                        android:textColor="@android:color/holo_orange_dark"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                    <RelativeLayout
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
 
 
-            </RelativeLayout>
+                        <TextView
+                            android:id="@+id/one"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif-smallcaps"
+                            android:gravity="center"
+                            android:padding="3sp"
+                            android:text="State:"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="25sp" />
+
+                        <TextView
+                            android:id="@+id/state"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/one"
+                            android:fontFamily="casual"
+                            android:gravity="center"
+                            android:padding="3sp"
+                            android:text="Unplugged"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="30sp" />
+
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
+
+                        <TextView
+
+                            android:id="@+id/two"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif-smallcaps"
+                            android:gravity="center"
+                            android:padding="3sp"
+                            android:text="Has a microphone?"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="25sp" />
+
+                        <TextView
+                            android:id="@+id/mic"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@+id/two"
+                            android:fontFamily="casual"
+                            android:gravity="center"
+                            android:padding="3sp"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="30sp" />
+
+                    </RelativeLayout>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
         </LinearLayout>
 
+    </LinearLayout>
 
-    </android.support.v7.widget.CardView>
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
