--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -1,120 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:custom="http://schemas.android.com/tools"
-android:id="@+id/activity_camera"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-
-<android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar"
-    android:background="@color/colorPrimary"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/tools"
+    android:id="@+id/activity_camera"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize">
+    android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Sense It All!"
-        android:fontFamily="sans-serif-smallcaps"
-        android:textColor="#FFF"
-        android:textSize="20sp"
-        android:gravity="center"/>
+        android:orientation="vertical">
 
-</android.support.v7.widget.Toolbar>
-
-<FrameLayout
-    android:layout_width="match_parent"
-    android:id="@+id/toolbar2"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary"
-    android:layout_marginTop="?actionBarSize">
-
-</FrameLayout>
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:id="@+id/ll"
-    android:layout_below="@+id/toolbar">
-
-    <android.support.v7.widget.CardView
-        android:layout_width="0sp"
-        android:layout_height="150sp"
-        android:layout_weight="1"
-        android:layout_margin="10sp"
-        app:cardCornerRadius="10sp"
-        app:cardElevation="@dimen/app_bar_elevation">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:padding="10sp"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:gravity="center"
+                android:text="@string/sense_it_all"
+                android:textColor="#FFF"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:textStyle="normal|bold" />
 
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.Toolbar>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="0sp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:padding="5sp"
-        android:layout_margin="10sp"
-        app:cardCornerRadius="10sp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
-        app:cardElevation="@dimen/app_bar_elevation">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:id="@+id/card"
+                android:text="@string/magnetic_compass"
+                android:textColor="@color/colorWhiteShade"
+                android:background="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp">
+
+            </TextView>
+
+        </FrameLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:elevation="@dimen/app_bar_elevation"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-smallcaps"
-            android:textStyle="bold"
-            android:padding="6sp"
-            android:gravity="center"
-            android:textColor="@color/colorWhiteShade"
-            android:text="COMPASS"/>
+            android:gravity="center_horizontal"
+            android:layout_margin="5sp"
+            android:orientation="vertical">
 
-    </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardElevation="@dimen/app_bar_elevation"
+                app:cardCornerRadius="5sp"
+                android:layout_margin="10sp"
+                app:cardBackgroundColor="@color/colorPrimaryDark">
 
-</LinearLayout>
+                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
+                    android:paddingBottom="@dimen/activity_vertical_margin">
 
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardElevation="@dimen/app_bar_elevation"
-    app:cardCornerRadius="5sp"
-    android:layout_margin="10sp"
-    android:layout_below="@+id/ll"
-    app:cardBackgroundColor="@color/colorPrimaryDark">
+                    <ImageView
+                        android:id="@+id/main_image_dial"
+                        android:layout_width="320dp"
+                        android:layout_height="320dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/dial" />
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+                    <ImageView
+                        android:id="@+id/main_image_hands"
+                        android:layout_width="20dp"
+                        android:layout_height="240dp"
+                        android:layout_centerInParent="true"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/hands" />
 
-        <ImageView
-            android:id="@+id/main_image_dial"
-            android:layout_width="320dp"
-            android:layout_height="320dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/dial" />
+                </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/main_image_hands"
-            android:layout_width="20dp"
-            android:layout_height="240dp"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/hands" />
+            </android.support.v7.widget.CardView>
 
-    </RelativeLayout>
+        </LinearLayout>
 
-</android.support.v7.widget.CardView>
+    </LinearLayout>
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
