--- a/app/src/main/res/layout/activity_vibrator.xml
+++ b/app/src/main/res/layout/activity_vibrator.xml
@@ -1,196 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_vibrate"
+    xmlns:custom="http://schemas.android.com/tools"
+    android:id="@+id/activity_camera"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Sense It All!"
-            android:fontFamily="sans-serif-smallcaps"
-            android:textColor="#FFF"
-            android:textSize="20sp"
-            android:gravity="center"/>
-
-    </android.support.v7.widget.Toolbar>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:id="@+id/toolbar2"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:layout_marginTop="?actionBarSize">
-
-    </FrameLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/ll"
-        android:layout_below="@+id/toolbar">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="0sp"
-            android:layout_height="150sp"
-            android:layout_weight="1"
-            android:layout_margin="10sp"
-            app:cardCornerRadius="10sp"
-            app:cardElevation="@dimen/app_bar_elevation">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:padding="10sp"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:gravity="center"
+                android:text="@string/sense_it_all"
+                android:textColor="#FFF"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:textStyle="normal|bold" />
 
-        </android.support.v7.widget.CardView>
+        </android.support.v7.widget.Toolbar>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="0sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:padding="5sp"
-            android:layout_margin="10sp"
-            app:cardCornerRadius="10sp"
-            app:cardBackgroundColor="@color/colorPrimaryDark"
-            app:cardElevation="@dimen/app_bar_elevation">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"/>
 
             <TextView
-                android:id="@+id/textView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:elevation="@dimen/app_bar_elevation"
-                android:textSize="20sp"
+                android:layout_height="?attr/actionBarSize"
+                android:text="Vibrator Test"
                 android:textColor="@color/colorWhiteShade"
-                android:fontFamily="sans-serif-smallcaps"
+                android:background="@color/colorPrimaryDark"
                 android:textStyle="bold"
-                android:padding="6sp"
+                android:fontFamily="cursive"
                 android:gravity="center"
-                android:text="SAMPLE DATA"/>
+                android:textSize="20sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp">
 
-        </android.support.v7.widget.CardView>
+            </TextView>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_margin="5sp"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                app:cardElevation="@dimen/app_bar_elevation"
+                app:cardCornerRadius="5sp"
+                android:layout_margin="5sp"
+                android:clickable="true"
+                android:onClick="onClick"
+                android:id="@+id/card">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="8sp"
+                    android:text="Vibrate Once"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:fontFamily="casual"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:layout_gravity="center"/>
+
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5sp"
-        android:layout_below="@+id/ll">
-
-        <android.support.v7.widget.CardView
-            android:layout_column="1"
-            android:layout_row="1"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            app:cardElevation="@dimen/app_bar_elevation"
-            app:cardCornerRadius="5sp"
-            android:layout_margin="5sp"
-            android:clickable="true"
-            android:onClick="onClick"
-            android:id="@+id/card">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="8sp"
-                android:text="Vibrate Once"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:gravity="center"
-                android:fontFamily="casual"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_gravity="center"/>
-
-        </android.support.v7.widget.CardView>
-
-        <!--<android.support.v7.widget.CardView-->
-            <!--android:layout_column="2"-->
-            <!--android:layout_row="1"-->
-            <!--android:layout_rowWeight="1"-->
-            <!--android:layout_columnWeight="1"-->
-            <!--app:cardElevation="@dimen/app_bar_elevation"-->
-            <!--app:cardCornerRadius="5sp"-->
-            <!--android:layout_margin="5sp"-->
-            <!--android:clickable="true"-->
-            <!--android:onClick="onClick"-->
-            <!--android:id="@+id/card2">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:padding="8sp"-->
-                <!--android:text="Vibrate Pattern 1"-->
-                <!--android:textStyle="bold"-->
-                <!--android:fontFamily="casual"-->
-                <!--android:textSize="18sp"-->
-                <!--android:gravity="center"-->
-                <!--android:textColor="@color/colorPrimaryDark"-->
-                <!--android:layout_gravity="center"/>-->
-
-        <!--</android.support.v7.widget.CardView>-->
-
-        <!--<android.support.v7.widget.CardView-->
-            <!--android:layout_column="1"-->
-            <!--android:layout_row="2"-->
-            <!--android:layout_rowWeight="1"-->
-            <!--android:layout_columnWeight="1"-->
-            <!--app:cardElevation="@dimen/app_bar_elevation"-->
-            <!--app:cardCornerRadius="5sp"-->
-            <!--android:layout_margin="5sp"-->
-            <!--android:clickable="true"-->
-            <!--android:onClick="onClick"-->
-            <!--android:id="@+id/card3">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:padding="8sp"-->
-                <!--android:text="Vibrate Pattern 2"-->
-                <!--android:fontFamily="casual"-->
-                <!--android:textStyle="bold"-->
-                <!--android:textSize="18sp"-->
-                <!--android:gravity="center"-->
-                <!--android:textColor="@color/colorPrimaryDark"-->
-                <!--android:layout_gravity="center"/>-->
-
-        <!--</android.support.v7.widget.CardView>-->
-
-        <!--<android.support.v7.widget.CardView-->
-            <!--android:layout_column="2"-->
-            <!--android:layout_row="2"-->
-            <!--android:layout_rowWeight="1"-->
-            <!--android:layout_columnWeight="1"-->
-            <!--app:cardElevation="@dimen/app_bar_elevation"-->
-            <!--app:cardCornerRadius="5sp"-->
-            <!--android:layout_margin="5sp"-->
-            <!--android:clickable="true"-->
-            <!--android:onClick="onClick"-->
-            <!--android:id="@+id/card4">-->
-
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:padding="8sp"-->
-                <!--android:text="Vibrate Loop 1"-->
-                <!--android:fontFamily="casual"-->
-                <!--android:textStyle="bold"-->
-                <!--android:textSize="18sp"-->
-                <!--android:gravity="center"-->
-                <!--android:textColor="@color/colorPrimaryDark"-->
-                <!--android:layout_gravity="center"/>-->
-
-        <!--</android.support.v7.widget.CardView>-->
-
-    </GridLayout>
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
