--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,12 @@
     <color name="colorTest">#E65100</color>
     <color name="white">#FFFFFF</color>
 
+    <color name="colorTextOne">#6E7B8C</color>
+    <color name="colorTextTwo">#8B95A3</color>
+    <color name="colorTextThree">#D3D3D3</color>
+    <color name="colorTextFour">#E8E8E8</color>
+    <color name="colorTextFive">#F5F5F5</color>
+
     <color name="colorIntensity1">#212121</color>
     <color name="colorIntensity2">#424242</color>
     <color name="colorIntensity3">#616161</color>
